adição do css básico

--- a/assets/html/perfil.html
+++ b/assets/html/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil GitHub</title>
-    <link rel="stylesheet" href="assets\main.css">
+    <link rel="stylesheet" href="\perfim-github-TP1-DIW\assets\css\main.css">
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name = "author" content = "Maria Moreira">
 </head>
