--- a/assets/html/repo.html
+++ b/assets/html/repo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Repositório</title>
-        <link rel="stylesheet" href="asstets/css/repo.css">
+        <link rel="stylesheet" href="\perfim-github-TP1-DIW\assets\css\repo.css">
         <meta name="perfil-github" content="trabalho prático 1 - segunda tela">
         <meta name = "author" content = "Maria Moreira">
     </head>
