navbar semi-finalizada

--- a/assets/html/repo.html
+++ b/assets/html/repo.html
@@ -34,7 +34,11 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
                 </ul>
             <!--/div-->
         </nav>
-
+        <br><br><br><br><!--gambiarra para n sumir com o nome da pagina-->
+        <!--<label for="blah">label here</label>
+        <input type="checkbox" id="blah">
+            isso aq mostra como q funciona, se vc clicar no texto, marca a caixinha tbm, é assim q funciona com o menu
+            o q esta no for tem q ser igual o id-->
     </header>
     <main>
         <section id="perfil">
