--- a/assets/html/repo.html
+++ b/assets/html/repo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil GitHub</title>
-    <link rel="stylesheet" href="\assets\css\main.css">
+    <link rel="stylesheet" href="\assets\css\repo.css">
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name = "author" content = "Maria Moreira">
 </head>
@@ -41,87 +41,24 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
             o q esta no for tem q ser igual o id-->
     </header>
     <main>
-        <section id="perfil">
-            <img src="https://br.pinterest.com/pin/752382681512674020/" alt="foto perfil">
-            <h2>nome sobrenome</h2>
-            <p>descrição do github</p>
-            <p><strong>location:</strong> Belo Horizonte, MG, Brazil</p>
-            <p><strong>site:</strong>(colocar link do github)</p>
-            <p>icone/followers numbers</p>
-            <button id="facebook">icone facebook</button>
-            <button id="twitter">icone TWITTER</button>
-            <button id="instagram">icone ig</button>
-        </section>
-
-        <section id="repositorios">
-            <h2>Repositórios (numero de repositorios)</h2>
+        <section id="repositorio1">
+            <h2>Repositorio: nome</h2>
             <hr>
-            <div class="repositorio1">
-                <a href="repo.html"><h3>nome repositorios</h3></a>
-                <p>descrissão do repositorio</p>
-                <p>icone/estrela</p>
-                <p>icone/fork</p>
-            </div>
-            <div class="repositorio2">
-                <h3>nome repositorios</h3>
-                <p>descrissão do repositorio</p>
-                <p>icone/estrela</p>
-                <p>icone/fork</p>
-            </div>
-            <div class="repositorio3">
-                <h3>nome repositorios</h3>
-                <p>descrissão do repositorio</p>
-                <p>icone/estrela</p>
-                <p>icone/fork</p>
-            </div>
-            <div class="repositorio4">
-                <h3>nome repositorios</h3>
-                <p>descrissão do repositorio</p>
-                <p>icone/estrela</p>
-                <p>icone/fork</p>
-            </div>
+            <h3>descrição</h3>
+            <p>descrição</p>
+            <h3>data de criação</h3>
+            <p>data</p>
+            <h3>linguagem</h3>
+            <p>linguagem</p>
+            <h3>link de acesso</h3>
+            <a href="https://github.com/Brunamark">link</a>
+            <h3>tópicos</h3>
+            <button>topicos</button>
+            <button>topicos</button>
+            <button>topicos</button>
+            <button>topicos</button>
+            <button>topicos</button>
         </section>
-
-        <section id="conteudo">
-            <h2>Conteúdo Sugerido</h2>
-            <hr>
-            <div id="carousel">
-                <div class="sugestao1">
-                    <img src="https://br.pinterest.com/pin/752382681512674020/" alt="imagem">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                    <button>link</button>
-                </div>
-                <div class="sugestao2">
-                    <img src="https://br.pinterest.com/pin/752382681512674020/" alt="imagem">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                    <button>link</button>
-                </div>
-                <div class="sugestao3">
-                    <img src="https://br.pinterest.com/pin/752382681512674020/" alt="imagem">
-                    <h3>titulo</h3>
-                    <p>descrição</p>
-                    <button>link</button>
-                </div>
-
-        </section>
-        <secition id="colegas">
-            <h2>Colegas de Trabalho</h2>
-            <hr>
-            <div class="colega1">
-                <img src="https://br.pinterest.com/pin/752382681512674020/" alt="foto perfil">
-                <h3>nome</h3>
-            </div>
-            <div class="colega2">
-                <img src="https://br.pinterest.com/pin/752382681512674020/" alt="foto perfil">
-                <h3>nome</h3>
-            </div>
-            <div class="colega3">
-                <img src="https://br.pinterest.com/pin/752382681512674020/" alt="foto perfil">
-                <h3>nome</h3>
-            </div>
-        </secition>
 
     </main>
     <footer>
