adição de colegas de trabalho, conteudo sugerido e css

--- a/assets/html/repo.html
+++ b/assets/html/repo.html
@@ -42,22 +42,35 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
     </header>
     <main>
         <section id="repositorio1">
-            <h2>Repositorio: nome</h2>
+            <h2>Repositorio: JavaScript</h2>
             <hr>
             <h3>descrição</h3>
-            <p>descrição</p>
-            <h3>data de criação</h3>
-            <p>data</p>
+                <p>Repositorio para estudo de JavaScript</p><!--na realidade não tem nenhuma, mas para ter alguma coisa para colocar no trabalho vai ser essa-->
+            <div class="dadosrep">
+                <h3>data de criação</h3>
+                <p>2023-10-06</p>
             <h3>linguagem</h3>
-            <p>linguagem</p>
+                <p>JavaScript</p>
+                <p>HTML</p>
+                <p>CSS</p> 
             <h3>link de acesso</h3>
-            <a href="https://github.com/Brunamark">link</a>
+                <a href="https://github.com/Brunamark/JavaScript">JavaScript</a>
             <h3>tópicos</h3>
-            <button>topicos</button>
-            <button>topicos</button>
-            <button>topicos</button>
-            <button>topicos</button>
-            <button>topicos</button>
+            <button>JavaScript</button>
+            <button>HTML5</button>
+            <button>CSS</button>
+            </div>
+            <div class="starfork">
+                <div class="star">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20" width="22.5" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4a6696" d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"/></svg>
+                    <p>0</p>
+                </div>
+                <div class="fork">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20" width="17.5" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#4a6696" d="M80 104a24 24 0 1 0 0-48 24 24 0 1 0 0 48zm80-24c0 32.8-19.7 61-48 73.3V192c0 17.7 14.3 32 32 32H304c17.7 0 32-14.3 32-32V153.3C307.7 141 288 112.8 288 80c0-44.2 35.8-80 80-80s80 35.8 80 80c0 32.8-19.7 61-48 73.3V192c0 53-43 96-96 96H256v70.7c28.3 12.3 48 40.5 48 73.3c0 44.2-35.8 80-80 80s-80-35.8-80-80c0-32.8 19.7-61 48-73.3V288H144c-53 0-96-43-96-96V153.3C19.7 141 0 112.8 0 80C0 35.8 35.8 0 80 0s80 35.8 80 80zm208 24a24 24 0 1 0 0-48 24 24 0 1 0 0 48zM248 432a24 24 0 1 0 -48 0 24 24 0 1 0 48 0z"/></svg>
+                    <p>0</p>
+                </div>
+            </div>
+
         </section>
 
     </main>
