--- a/assets/html/repo2.html
+++ b/assets/html/repo2.html
@@ -21,7 +21,7 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
     <header>
 
         <nav class="navbar">   
-            <a href="perfil.html" class="logo">LOGO/SEU NOME</a>
+            <a href="perfil.html" class="logo">PERFIL GITHUB</a>
             <input type="checkbox" class="menu-btn" id="menu-btn"/>
             <label for="menu-btn" class="menu-icon">
                 <span class="nav-icon"></span>
@@ -41,25 +41,23 @@ ORIENTAÇÃO: use componente do bootstrapLinks to an external site. (detalhes no
             o q esta no for tem q ser igual o id-->
     </header>
     <main>
-        <h2>Repositorio: JavaScript</h2>
+        <h2>Repositorio: Advent of Code</h2>
         <hr>
         <section id="repositorio1">
 
             <h3>descrição</h3>
-                <p>Repositorio para estudo de JavaScript</p><!--na realidade não tem nenhuma, mas para ter alguma coisa para colocar no trabalho vai ser essa-->
+                <p>Advent of Code Challenges</p><!--na realidade não tem nenhuma, mas para ter alguma coisa para colocar no trabalho vai ser essa-->
             <div class="dadosrep">
                 <h3>data de criação</h3>
-                    <p>2023-10-06</p>
+                    <p>2023-12-03</p>
                 <h3>linguagem</h3>
                     <p>JavaScript</p>
-                <p>HTML</p>
-                    <p>CSS</p> 
+
                 <h3>link de acesso</h3>
-                    <a href="https://github.com/Brunamark/JavaScript">JavaScript</a>
+                    <a href="Desafios Bootcamp Fullstack Santander">Advent of Code</a>
                 <h3>tópicos</h3>
                     <button>JavaScript</button>
-                    <button>HTML5</button>
-                    <button>CSS</button>
+
                 </div>
                 <div class="icones">
                     <div class="starfork">
