mais alteraçõe do css, dessa vez a navbar

--- a/perfil-github-TP2/public/index.html
+++ b/perfil-github-TP2/public/index.html
@@ -10,20 +10,28 @@
 </head>
 <body>
     <header>
-        <h1>Meu Nome</h1>
-        <nav>
-            <ul>
-                <li><a href="#perfil">Perfil</a></li>
-                <li><a href="#repositorios">Repositórios</a></li>
-                <li><a href="#conteudo">Conteúdo Sugerido</a></li>
-                <li><a href="#colegas">Colegas de Trabalho</a></li>
-                <li><a href="#seguindo">Pessoas que eu Sigo</a></li>
-            </ul>
+        <nav class="navbar">   
+            <a href="perfil.html" class="logo">PERFIL GITHUB</a>
+            <input type="checkbox" class="menu-btn" id="menu-btn"/>
+            <label for="menu-btn" class="menu-icon">
+                <span class="nav-icon"></span>
+            </label>
+
+                <ul class="menu">
+                    <li><a href="#perfil">Perfil</a></li>
+                    <li><a href="#repositorios">Repositórios</a></li>
+                    <li><a href="#conteudo">Conteúdo Sugerido</a></li>
+                    <li><a href="#colegas">Colegas de Trabalho</a></li>
+                    <li><a href="#seguindo">Pessoas que eu Sigo</a></li>
+                </ul>
+
         </nav>
     </header>
 
     <section id="perfil">
+        <br><br><br>
         <h2>Perfil</h2>
+        <hr>
         <!-- Dados do perfil do GitHub -->
     </section>
 
