--- a/perfil-github-TP2/public/repo.html
+++ b/perfil-github-TP2/public/repo.html
@@ -5,46 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site Pessoal</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Meu Nome</h1>
-        <nav class="navbar">
+        <nav class="navbar">   
             <a href="perfil.html" class="logo">PERFIL GITHUB</a>
             <input type="checkbox" class="menu-btn" id="menu-btn"/>
             <label for="menu-btn" class="menu-icon">
                 <span class="nav-icon"></span>
             </label>
-                <ul class="menu">
-                    <li><a href="#perfil">Perfil</a></li>
-                    <li><a href="#repositorios">Repositórios</a></li>
-                    <li><a href="#conteudo">Conteúdo Sugerido</a></li>
-                    <li><a href="#colegas">Colegas de Trabalho</a></li>
-                    <li><a href="#seguindo">Pessoas que eu Sigo</a></li>
-                </ul>
+
+            <ul class="menu">
+                <li><a href="#perfil">Perfil</a></li>
+                <li><a href="#repositorios">Repositórios</a></li>
+                <li><a href="#conteudo">Conteúdo Sugerido</a></li>
+                <li><a href="#colegas">Colegas de Trabalho</a></li>
+                <li><a href="#seguindo">Pessoas que eu Sigo</a></li>
+            </ul>
         </nav>
     </header>
 
     <section id="perfil">
+        <br><br><br>
         <!-- Dados do perfil do GitHub -->
     </section>
 
+    <section id="calendar">
+    </section>
+
     <section id="repositorios">
-        <!-- Lista de repositórios -->
+        <h2>Repositórios</h2>
+        <div id="repositorios-lista" class="repos-container">
+            <!-- Lista de repositórios -->
+        </div>
     </section>
 
-    <section id="conteudo">
-        <!-- Carrossel de conteúdos -->
+    <section id="contribuicoes">
     </section>
 
-    <section id="colegas">
-        <!-- Grade de colegas de trabalho -->
-    </section>  
+    <section id="carrossel">
+        <h2>Carrossel de Imagens</h2>
+        <div class="carousel-container">
+            <!-- Carrossel será injetado aqui -->
+        </div>
+    </section>
+    
 
     <section id="seguindo">
-        <h2>Pessoas que eu Sigo</h2>
-        <div id="seguindo-lista">
+        <h2>Seguindo</h2>
+        <div id="seguindo-lista" class="following-container">
             <!-- Lista de pessoas que você segue -->
         </div>
     </section>
@@ -52,7 +66,8 @@
     <footer>
         <p>Informações sobre você</p>
     </footer>
-
+    
     <script src="scripts/main.js"></script>
+    <script src="scripts/carrossel.js"></script>
 </body>
 </html>
