--- a/perfil-github-TP2/public/index.html
+++ b/perfil-github-TP2/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site Pessoal</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main2.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/carrossel.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar">   
-            <a href="perfil.html" class="logo">PERFIL GITHUB</a>
+            <a href="index.html" class="logo"> PERFIL GITHUB </a>
             <input type="checkbox" class="menu-btn" id="menu-btn"/>
             <label for="menu-btn" class="menu-icon">
                 <span class="nav-icon"></span>
@@ -24,20 +24,17 @@
             <ul class="menu">
                 <li><a href="#perfil">Perfil</a></li>
                 <li><a href="#repositorios">Repositórios</a></li>
-                <li><a href="#conteudo">Conteúdo Sugerido</a></li>
-                <li><a href="#colegas">Colegas de Trabalho</a></li>
-                <li><a href="#seguindo">Pessoas que eu Sigo</a></li>
+                <li><a href="#carrossel">Stats GitHub</a></li>
+                <li><a href="#seguindo">Seguindo</a></li>
             </ul>
         </nav>
+
     </header>
 
-    <section id="perfil">
-        <br><br><br>
+    <section id="perfil2">
         <!-- Dados do perfil do GitHub -->
     </section>
 
-    <section id="calendar">
-    </section>
 
     <section id="repositorios">
         <h2>Repositórios</h2>
@@ -46,16 +43,16 @@
         </div>
     </section>
 
-    <section id="contribuicoes">
-    </section>
-
     <section id="carrossel">
-        <h2>Carrossel de Imagens</h2>
-        <div class="carousel-container">
-            <!-- Carrossel será injetado aqui -->
+        <h2>Estatísticas GitHub</h2>
+    <div class="carousel-container">
+        <div class="carousel-inner">
+            <!-- As imagens serão inseridas dinamicamente aqui -->
         </div>
-    </section>
-    
+        <a class="carousel-control-prev" href="#">&lsaquo;</a>
+        <a class="carousel-control-next" href="#">&rsaquo;</a>
+    </div>
+</section>
 
     <section id="seguindo">
         <h2>Seguindo</h2>
