pagina inicial finalizada

--- a/perfil-github-TP2/public/index.html
+++ b/perfil-github-TP2/public/index.html
@@ -41,6 +41,7 @@
     </section>
 
     <section id="conteudo">
+        <h2>Estatísticas GitHub</h2>
         <div id="carousel">
             <div class="acarousel-inner">
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
@@ -95,7 +96,7 @@
     </section>
 
     <footer>
-        <p>Informações sobre você</p>
+        <p>Feito por Maria Moreira</p>
     </footer>
     
     <script src="scripts/main.js"></script>
