--- a/perfil-github-TP2/public/repo-template.html
+++ b/perfil-github-TP2/public/repo-template.html
@@ -6,6 +6,9 @@
     <title>Repositorio</title>
     <link rel="stylesheet" href="styles/repo.css">
     <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
     <meta name="perfil-github" content="trabalho prático 1">
     <meta name="author" content="Maria Moreira">
 </head>
@@ -18,19 +21,24 @@
                 <span class="nav-icon"></span>
             </label>
             <ul class="menu">
-                <li><a href="#perfil">Perfil</a></li>
-                <li><a href="#repositorios">Repositórios</a></li>
-                <li><a href="#carrossel">Stats GitHub</a></li>
-                <li><a href="#seguindo">Seguindo</a></li>
+                <li><a href="index.html">Perfil</a></li>
+                <li><a href="index.html#repositorios">Repositórios</a></li>
+                <li><a href="index.html#conteudo">Stats GitHub</a></li>
+                <li><a href="index.html#seguindo">Seguindo</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2 id="repo-name">Repositorio</h2>
-        <hr>
-        <section id="repositorio-details">
-            <!-- Detalhes do repositório serão carregados aqui -->
-        </section>
+        <br><br><br>
+        <div id="repo">
+            <div class="linha">
+                <h2 id="repo-name">Repositorio</h2>
+                <hr>
+            </div>
+            <section id="repositorio-details">
+                <!-- Detalhes do repositório serão carregados aqui -->
+            </section>
+        </div>
     </main>
     <hr>
     <footer>
