--- a/perfil-github-TP2/public/index.html
+++ b/perfil-github-TP2/public/index.html
@@ -23,7 +23,7 @@
             <ul class="menu">
                 <li><a href="#perfil">Perfil</a></li>
                 <li><a href="#repositorios">Repositórios</a></li>
-                <li><a href="#carrossel">Stats GitHub</a></li>
+                <li><a href="#conteudo">Stats GitHub</a></li>
                 <li><a href="#seguindo">Seguindo</a></li>
             </ul>
         </nav>
